--- a/index.html
+++ b/index.html
@@ -31,11 +31,11 @@
     <div class="container">
         <div class="head1">
             <h1>Old site</h1>
-            <img src="./assets/nseold.png" alt="0">
-            <img src="./assets/nseold1.png" alt="1">
-            <img src="./assets/nseold2.png" alt="2">
+            <img src="./nseold.png" alt="0">
+            <img src="./nseold1.png" alt="1">
+            <img src="./nseold2.png" alt="2">
             <h1>Redesigned site</h1>
-            <img id = "newsite" src="./assets/nsenew.png" alt="01">
+            <img id = "newsite" src="./nsenew.png" alt="01">
         </div>
     </div>
 </body>
